<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.visitgallery.SignUp" 
    android:background="@drawable/orange"
   >

    <ScrollView
        android:id="@+id/sView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/s_up_text" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="@string/s_up"
                android:textColor="@color/white"
                />
	       <EditText
	           	android:id="@+id/first"
	            android:layout_width="wrap_content"
	            android:layout_height="60dp"
	            android:hint="@string/f_name"
	            android:imeOptions="actionNext"
	            android:textColorHint="@color/white"
	            android:inputType="textPersonName"
	            android:layout_marginTop="20dp"
	            android:textSize="18sp"
	            android:textStyle="italic"
	            android:background="@drawable/box"
	            android:padding="10dp"/>
	       <EditText
	            android:id="@+id/last"
	            android:layout_width="wrap_content"
	            android:layout_height="60dp"
	            android:hint="@string/l_name"
	            android:imeOptions="actionNext"
	            android:textColorHint="@color/white"
	            android:layout_marginTop="20dp"
	            android:inputType="textPersonName"
	            android:textSize="18sp"
	            android:textStyle="italic"
	            android:background="@drawable/box"
	            android:padding="10dp"/>
	       <EditText
	            android:id="@+id/id"
	            android:layout_width="wrap_content"
	            android:layout_height="60dp"
	            android:hint="@string/no"
	            android:imeOptions="actionNext"
	            android:textColorHint="@color/white"
	            android:layout_marginTop="20dp"
	            android:inputType="number"
	            android:textSize="18sp"
	            android:textStyle="italic"
	            android:background="@drawable/box"
	            android:padding="10dp"/>

	       <EditText
	           android:id="@+id/pass"
	           android:layout_width="wrap_content"
	           android:layout_height="60dp"
	           android:layout_marginTop="20dp"
	           android:hint="@string/pass"
	           android:imeOptions="actionNext"
	           android:inputType="textPassword"
	           android:textColorHint="@color/white"
	           android:textSize="18sp" 
	           android:textStyle="italic"
	           android:background="@drawable/box"
	           android:padding="10dp"
	           android:maxLength="6"/>
	       
	     <Button 
	         android:layout_width="match_parent" 
	         android:layout_height="40dp" 
	         android:layout_marginTop="30dp" 
	         android:background="@drawable/button_bg" 
	         android:text="@string/reg" 
	         android:onClick="register" />
        </LinearLayout>
	</ScrollView>

</RelativeLayout>
