<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.visitgallery.GalleryActivity"
    android:background="@drawable/orange" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/mumbai_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/mum" 
        android:onClick="getMumbai"
        android:background="@drawable/button_bg"
        android:padding="10dp"/>

    <Button
        android:id="@+id/new_york_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mumbai_button"
        android:layout_centerHorizontal="true"
        android:text="@string/ny" 
        android:onClick="getNew_York"
        android:background="@drawable/button_bg"
        android:padding="10dp"/>

    <Button
        android:id="@+id/tokyo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/new_york_button"
        android:layout_alignBottom="@+id/new_york_button"
        android:layout_alignParentRight="true"
        android:text="@string/tok" 
        android:onClick="getTokyo"
        android:background="@drawable/button_bg"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/mumbai_button"
        android:text="@string/gal"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
